--- a/src/app/logbook/logbook.component.html
+++ b/src/app/logbook/logbook.component.html
@@ -1,1 +1,18 @@
-<p>logbook works!</p>
+<div>
+    <div>
+        <label for="username">Username:</label>
+        <user id="username" name="username"></user>
+    </div>
+    <div>
+        <label for="email">E-mail:</label>
+        <user id="email" name="email"></user>
+    </div>
+    <div>
+        <label for="hours">Hours:</label>
+        <user id="hours" name="hours"></user>
+    </div>
+    <div>
+        <span><script type="text/javascript">document.write(new Date().getFullYear())</script></span>
+        <p id="year"></p>
+    </div>
+</div>
