--- a/src/app/logbook/logbook.component.html
+++ b/src/app/logbook/logbook.component.html
@@ -12,7 +12,6 @@
         <user id="hours" name="hours"></user>
     </div>
     <div>
-        <span><script type="text/javascript">document.write(new Date().getFullYear())</script></span>
-        <p id="year"></p>
+        <p id="year">{{ currentYear }}</p>
     </div>
 </div>
