--- a/src/app/logbook/logbook.component.html
+++ b/src/app/logbook/logbook.component.html
@@ -1,15 +1,23 @@
-<div>
+<div class="container grid gap-y-3">
     <div>
-        <label for="username">Username:</label>
-        <user id="username" name="username"></user>
+        <label for="firstname">First&nbsp;name: </label>
+        <span id="firstname" name="firstname">{{ data[0]?.firstname }}</span>
     </div>
     <div>
-        <label for="email">E-mail:</label>
-        <user id="email" name="email"></user>
+        <label for="middlename">Middle&nbsp;name: </label>
+        <span id="middlename" name="middlename">{{ data[0]?.middlename }}</span>
     </div>
     <div>
-        <label for="hours">Hours:</label>
-        <user id="hours" name="hours"></user>
+        <label for="lastname">Last&nbsp;name: </label>
+        <span id="lastname" name="lastname">{{ data[0]?.lastname }}</span>
+    </div>
+    <div>
+        <label for="email">E-mail: </label>
+        <span id="email" name="email">{{ data[0]?.email }}</span>
+    </div>
+    <div>
+        <label for="hours">Total hours: </label>
+        <span id="hours" name="hours">{{ data[0]?.totalhours }}</span>
     </div>
     <div>
         <p id="year">{{ currentYear }}</p>
