--- a/src/app/logbook/login/login.component.html
+++ b/src/app/logbook/login/login.component.html
@@ -51,7 +51,7 @@
       id="email"
       name="email"
       formControlName="senderEmail"
-      placeholder="JohnDoe@gmail.com"
+      placeholder="johndoe@gmail.com"
     />
   </div>
 
@@ -64,11 +64,10 @@
       id="password"
       name="password"
       formControlName="senderPassword"
-      placeholder="password123"
     />
   </div>
 
-  
+
   <div>
     <button
       type="submit"
