--- a/src/app/logbook/logout/logout.component.html
+++ b/src/app/logbook/logout/logout.component.html
@@ -1,1 +1,13 @@
-<p>logout works!</p>
+<form
+  action=""
+  class="container grid gap-y-3">
+    <div>
+        <button
+        type="submit"
+        class="bg-gray-200 rounded-md shadow-md px-4 py-1 hover:cursor-pointer hover:bg-gray-300 active:bg-gray-400"
+        (click)="$event.preventDefault();"
+        >
+        Logout
+        </button>
+    </div>
+</form>
